--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,101 +41,7 @@ body {
 .container {
 	width: 80%;
 }
-.column,  .columns {
-	margin-left: 4%;
-}
-.column:first-child,  .columns:first-child {
-	margin-left: 0;
-}
-.one.column,  .one.columns {
-	width: 4.66666666667%;
-}
-.two.columns {
-	width: 13.3333333333%;
-}
-.three.columns {
-	width: 22%;
-}
-.four.columns {
-	width: 30.6666666667%;
-}
-.five.columns {
-	width: 39.3333333333%;
-}
-.six.columns {
-	width: 48%;
-}
-.seven.columns {
-	width: 56.6666666667%;
-}
-.eight.columns {
-	width: 65.3333333333%;
-}
-.nine.columns {
-	width: 74.0%;
-}
-.ten.columns {
-	width: 82.6666666667%;
-}
-.eleven.columns {
-	width: 91.3333333333%;
-}
-.twelve.columns {
-	width: 100%;
-	margin-left: 0;
-}
-.one-third.column {
-	width: 30.6666666667%;
-}
-.two-thirds.column {
-	width: 65.3333333333%;
-}
-.one-half.column {
-	width: 48%;
-}
-/* Offsets */
-.offset-by-one.column,  .offset-by-one.columns {
-	margin-left: 8.66666666667%;
-}
-.offset-by-two.column,  .offset-by-two.columns {
-	margin-left: 17.3333333333%;
-}
-.offset-by-three.column,  .offset-by-three.columns {
-	margin-left: 26%;
-}
-.offset-by-four.column,  .offset-by-four.columns {
-	margin-left: 34.6666666667%;
-}
-.offset-by-five.column,  .offset-by-five.columns {
-	margin-left: 43.3333333333%;
-}
-.offset-by-six.column,  .offset-by-six.columns {
-	margin-left: 52%;
-}
-.offset-by-seven.column,  .offset-by-seven.columns {
-	margin-left: 60.6666666667%;
-}
-.offset-by-eight.column,  .offset-by-eight.columns {
-	margin-left: 69.3333333333%;
-}
-.offset-by-nine.column,  .offset-by-nine.columns {
-	margin-left: 78.0%;
-}
-.offset-by-ten.column,  .offset-by-ten.columns {
-	margin-left: 86.6666666667%;
-}
-.offset-by-eleven.column,  .offset-by-eleven.columns {
-	margin-left: 95.3333333333%;
-}
-.offset-by-one-third.column,  .offset-by-one-third.columns {
-	margin-left: 34.6666666667%;
-}
-.offset-by-two-thirds.column,  .offset-by-two-thirds.columns {
-	margin-left: 69.3333333333%;
-}
-.offset-by-one-half.column,  .offset-by-one-half.columns {
-	margin-left: 52%;
-}
+
 }
 /* Typography
 ********************************************************************* */
@@ -222,10 +128,10 @@ header {
 	justify-content: center;
      width: 100%;
 	height: 100vh;
-	background: #e55d87;
-	background: -moz-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
-	background: -webkit-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
-	background: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%);
+	background: #cb2d3e;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #ef473a, #cb2d3e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
    
 }
 .title {
@@ -470,68 +376,10 @@ opacity: 0;
 	padding: 100px 0 100px 0;
 	background-color: #F5F5F5;
 }
-.progressBar {
-	margin-bottom: 26px;
-	margin-bottom: 1.66em;
-}
-.progressBar h4 {
-	font-size: 16px;
-	text-transform: none;
-	margin-bottom: 7px;
-	margin-bottom: .33em;
-}
-.progressBarContainer {
-	width: 100%;
-	height: 8px;
-	background: #E1E1E1;
-	overflow: hidden;
-}
-.progressBarValue {
-	height: 8px;
-	float: left;
-	background: #e55d87; /* Old browsers */
-	background: -moz-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
-	background: -webkit-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
-	background: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%);
-}
-.value-00 {
-	width: 0;
-}
-.value-10 {
-	width: 10%;
-}
-.value-20 {
-	width: 20%;
-}
-.value-30 {
-	width: 30%;
-}
-.value-40 {
-	width: 40%;
-}
-.value-50 {
-	width: 50%;
-}
-.value-60 {
-	width: 60%;
-}
-.value-70 {
-	width: 70%;
-}
-.value-80 {
-	width: 80%;
-}
-.value-90 {
-	width: 90%;
-}
-.value-100 {
-	width: 100%;
-}
+
 /* Portfolio Section
 ********************************************************************* */
-#portfolio {
-	padding: 100px 0 100px 0;
-}
+
 .image {
 	background-color: #5a5a5a;
 	width: 100%;
@@ -548,66 +396,8 @@ opacity: 0;
 	background-position: center;
 }
 
-/* Testimonial Section
-********************************************************************* */
-#testimonial {
-	background-color: #F5F5F5;
-	padding: 100px 0 100px 0;
-}
-.quoteLoop {
-	height: auto;
-	width: 100%;
-	margin: 0 auto;
-	position: relative;
-}
-.quote {
-	margin: 10px 30px;
-	height: inherit;
-	top: 0px;
-	display: none;
-	text-align: center;
-}
-/* Contact Section
-********************************************************************* */
-#contact {
-	padding: 100px 0 100px 0;
-}
-input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"], textarea, select {
-	height: 38px;
-	padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
-	background-color: #F5F5F5;
-	border: none;
-	box-shadow: none;
-	box-sizing: border-box;
-	border-radius: 0;
-	outline: none;
-}
-textarea {
-	min-height: 250px;
-}
-input[type="submit"] {
-	display: inline-block;
-	height: 38px;
-	padding: 0 30px;
-	color: #fff;
-	text-align: center;
-	font-size: 11px;
-	font-weight: 600;
-	line-height: 38px;
-	letter-spacing: .1rem;
-	text-transform: uppercase;
-	text-decoration: none;
-	white-space: nowrap;
-	background: #5fc3e4;
-	border-radius: 0px;
-	border: 0;
-	cursor: pointer;
-	box-sizing: border-box;
-}
-input[type="submit"]:hover {
-	background: #e55d87;
-	text-decoration: none;
-}
+
+
 /* Footer Section
 ********************************************************************* */
 footer {
@@ -681,24 +471,6 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 	display: table;
 	clear: both;
 }
-/* Misc
-********************************************************************* */
-
-.icon {
-	padding-right: 10px;
-	color: #e55d87;
-}
-.block {
-	width: 70px;
-	height: 2px;
-	background: #e55d87; /* Old browsers */
-	background: -moz-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
-	background: -webkit-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
-	background: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%);
-	margin-bottom: 50px;
-}
-
-
 /* iconos skills */
 body {
 	
@@ -713,7 +485,6 @@ i.material-icons {
 	border-radius: 50%;
 	padding: 5px;
 	margin: 3px;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 	transition: color 0.2s ease, background-color 0.2s ease, transform 0.3s ease;
 }
 
@@ -732,103 +503,114 @@ i.material-icons:after {
 
 i.material-icons:hover:after {
 	transform: scale(1);
-	box-shadow: 10px 0 20px rgba(0, 0, 0, 0.19), 6px 0 6px rgba(0, 0, 0, 0.23);
+
 }
 
 i.material-icons:nth-of-type(4) {
-	background-color: #88b999;
+	background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(4):hover {
-	color: #88b999;
+	color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(4):after {
-	border-color: #88b999;
+	border-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(5) {
-	background-color: #88b2b9;
+	background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(5):hover {
-	color: #88b2b9;
+	color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(5):after {
-	border-color: #88b2b9;
+	border-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(6) {
-	background-color: #8897b9;
+	background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(6):hover {
-	color: #8897b9;
+	color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(6):after {
-	border-color: #8897b9;
+	border-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(7) {
-	background-color: #af88b9;
+	background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(7):hover {
-	color: #af88b9;
+	color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(7):after {
-	border-color: #af88b9;
+	border-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(8) {
-	background-color: #d59acb;
+	background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(8):hover {
-	color: #d59acb;
+	color: #cb2d3e;
+}
+
+i.material-icons:nth-of-type(9):after {
+	border-color: #cb2d3e;
+}
+i.material-icons:nth-of-type(9) {
+	background-color: #cb2d3e;
+}
+
+i.material-icons:nth-of-type(9):hover {
+	color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(8):after {
-	border-color: #d59acb;
+	border-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(1) {
-	background-color: #cd8484;
+	background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(1):hover {
-	color: #cd8484;
+	color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(1):after {
-	border-color: #cd8484;
+	border-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(2) {
-	background-color: #ec9f83;
+	background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(2):hover {
-	color: #ec9f83;
+	color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(2):after {
-	border-color: #ec9f83;
+	border-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(3) {
-	background-color: #cdb274;
+	background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(3):hover {
-	color: #cdb274;
+	color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(3):after {
-	border-color: #cdb274;
+	border-color: #cb2d3e;
 }
 
 i.material-icons:hover {
