colocando los proyectos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,28 +3,22 @@
 /* Base Styles
 ********************************************************************* */
 html {
-	font-size: 62.5%;
+	font-size: 52.5%;
 }
 body {
-	font-size: 1.5em;
+	font-size: 2.0em;
 	line-height: 1.6;
 	font-weight: 400;
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	color: #222;
+	
 }
-/* Grid
-********************************************************************* */  
 .container {
 	position: relative;
 	width: 100%;
 	max-width: 960px;
 	margin: 0 auto;
 	padding: 0 20px;
-	box-sizing: border-box;
-}
-.column, .columns {
-	width: 100%;
-	float: left;
 	box-sizing: border-box;
 }
 
@@ -35,7 +29,6 @@ body {
 	padding: 0;
 }
 }
-
 /* For devices larger than 550px */
 @media (min-width: 550px) {
 .container {
@@ -51,67 +44,39 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 300;
 }
 h1 {
-	font-size: 4.0rem;
+	font-size: 3.5rem;
 	line-height: 1.2;
 	letter-spacing: -.1rem;
 }
 h2 {
-	font-size: 3.6rem;
+	font-size: 2.6rem;
 	line-height: 1.25;
 	letter-spacing: -.1rem;
 }
 h3 {
-	font-size: 3.0rem;
+	font-size: 2.0rem;
 	line-height: 1.3;
 	letter-spacing: -.1rem;
 }
 h4 {
-	font-size: 2.4rem;
+	font-size: 1.4rem;
 	line-height: 1.35;
 	letter-spacing: -.08rem;
 }
 h5 {
-	font-size: 1.8rem;
+	font-size: 0.8rem;
 	line-height: 1.5;
 	letter-spacing: -.05rem;
 }
-h6 {
-	font-size: 1.5rem;
-	line-height: 1.6;
-	letter-spacing: 0;
-}
 
-/* Larger than phablet */
-@media (min-width: 550px) {
-h1 {
-	font-size: 5.0rem;
-}
-h2 {
-	font-size: 4.2rem;
-}
-h3 {
-	font-size: 3.6rem;
-}
-h4 {
-	font-size: 3.0rem;
-}
-h5 {
-	font-size: 2.4rem;
-}
-h6 {
-	font-size: 1.5rem;
-}
-}
-p {
-	margin-top: 0;
-}
+
 /* Links
 ********************************************************************* */
 a {
-	color: #1EAEDB;
+	color: #cb2d3e;
 }
 a:hover {
-	color: #0FA0CE;
+	color: #cb2d3e;
 }
 /* Header Section
 ********************************************************************* */
@@ -286,7 +251,7 @@ nav ul a:hover {
 	width: 30px;
 	height: 4px;
 	margin-bottom: 6px;
-	background: #000000;
+	background: #cb2d3e;
 	display: block;
 }
 .scroll-down {
@@ -353,49 +318,31 @@ transform:translate(0, 10px) rotate(45deg);
 opacity: 0;
 }
 }
-/* About Section
-********************************************************************* */
+/* About Section*/
 
 #about {
 	padding: 100px 0 50px 0;
 }
 .imgme{
-    border-radius: 20%
+	border-radius: 20%;
+	width: 80%;
+	height: 85%;
 }
-/* Team Section
-********************************************************************* */
-#team {
-	padding: 50px 0 100px 0;
+/* Todos los titulos */
+.titleRed{
+	color: #cb2d3e;
 }
-#team .icon {
-	font-size: 26px;
+
+/* Proyectos */
+#proyectos{
+	padding: 100px 0 100 px 0;
+	background-color: #F5F5F5
 }
-/* Skills Section
-********************************************************************* */
+/* Skills Section */
 #skills {
 	padding: 100px 0 100px 0;
-	background-color: #F5F5F5;
+	background-color: white;
 }
-
-/* Portfolio Section
-********************************************************************* */
-
-.image {
-	background-color: #5a5a5a;
-	width: 100%;
-	height: auto;
-	margin-left: auto;
-	margin-right: auto;
-	transition: .5s;
-}
-.image:hover {
-	opacity: 0.6;
-	transition: .3s;
-	background-image: url(../images/hoverbg.png);
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
 
 
 /* Footer Section
@@ -403,20 +350,13 @@ opacity: 0;
 footer {
 	min-height: 120px;
 	padding: 40px 0 40px 0;
-	background: #e55d87;
-	background: -moz-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
-	background: -webkit-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
-	background: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%);
- filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e55d87', endColorstr='#5fc3e4', GradientType=1 );
-	box-sizing: border-box;
+	background: #cb2d3e;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #ef473a, #cb2d3e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 footer p {
 	color: #FFFFFF;
 	margin: 20px 0 0 0;
-}
-.socialIcons {
-	font-size: 34px;
-	color: rgba(255, 255, 255, 0.7);
 }
 /* Lists
 ********************************************************************* */
@@ -437,47 +377,17 @@ ul ul, ul ol, ol ol, ol ul {
 li {
 	margin-bottom: 1rem;
 }
-/* Spacing
-********************************************************************* */
-button, .button {
-	margin-bottom: 1rem;
-}
-input, textarea, select, fieldset {
-	margin-bottom: 1.5rem;
-}
-pre, blockquote, dl, figure, table, p, ul, ol, form {
-	margin-bottom: 2.5rem;
-}
-/* Utilities
-********************************************************************* */
-.u-full-width {
-	width: 100%;
-	box-sizing: border-box;
-}
-.u-max-full-width {
-	max-width: 100%;
-	box-sizing: border-box;
-}
-.u-pull-right {
-	float: right;
-}
-.u-pull-left {
-	float: left;
-}
-/* Clearing
-********************************************************************* */
-.container:after, .row:after, .u-cf {
-	content: "";
-	display: table;
-	clear: both;
-}
+
+
 /* iconos skills */
+
 body {
-	
 	text-align: center;
 }
 
-
+.main-content-icons{
+margin-top: 5%;
+}
 i.material-icons {
 	
 	color: white;
