--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ html {
 	font-size: 52.5%;
 }
 body {
+	text-align: center;
 	font-size: 2.0em;
 	line-height: 1.6;
 	font-weight: 400;
@@ -13,160 +14,80 @@ body {
 	color: #222;
 	
 }
-.container {
-	position: relative;
-	width: 100%;
-	max-width: 960px;
-	margin: 0 auto;
-	padding: 0 20px;
-	box-sizing: border-box;
-}
-
-/* For devices larger than 400px */
-@media (min-width: 400px) {
-.container {
-	width: 85%;
-	padding: 0;
-}
-}
-/* For devices larger than 550px */
-@media (min-width: 550px) {
-.container {
-	width: 80%;
-}
-
-}
-/* Typography
-********************************************************************* */
-h1, h2, h3, h4, h5, h6 {
-	margin-top: 0;
-	margin-bottom: 2rem;
-	font-weight: 300;
-}
-h1 {
-	font-size: 3.5rem;
-	line-height: 1.2;
-	letter-spacing: -.1rem;
-}
-h2 {
-	font-size: 2.6rem;
-	line-height: 1.25;
-	letter-spacing: -.1rem;
-}
-h3 {
-	font-size: 2.0rem;
-	line-height: 1.3;
-	letter-spacing: -.1rem;
-}
-h4 {
-	font-size: 1.4rem;
-	line-height: 1.35;
-	letter-spacing: -.08rem;
-}
-h5 {
-	font-size: 0.8rem;
-	line-height: 1.5;
-	letter-spacing: -.05rem;
-}
-
-
-/* Links
-********************************************************************* */
+/* NavsLinks */
 a {
 	color: #cb2d3e;
 }
 a:hover {
 	color: #cb2d3e;
 }
-/* Header Section
-********************************************************************* */
+/* Header*/
 
 
 header {
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: center;
-	-webkit-justify-content: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-     width: 100%;
-	height: 100vh;
-	background: #cb2d3e;  /* fallback for old browsers */
+display: flex;
+-webkit-box-pack: center;
+-webkit-justify-content: center;
+-ms-flex-pack: center;
+justify-content: center;
+width: 100%;
+height: 100vh;
+background: #cb2d3e;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #ef473a, #cb2d3e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-   
+  
 }
 .title {
-	-webkit-align-self: center;
-	-ms-flex-item-align: center;
-	align-self: center;
-	padding: 2rem;
-	max-width: 960px;
-	text-align: center;
+-webkit-align-self: center;
+-ms-flex-item-align: center;
+align-self: center;
+padding: 2rem;
+max-width: 960px;
+text-align: center;
 }
 .title .smallsep {
-	background: #fff;
-	height: 2px;
-	width: 70px;
-	margin: auto;
-	margin-top: 30px;
-	margin-bottom: 30px;
+background: #fff;
+height: 2px;
+width: 70px;
+margin: auto;
+margin-top: 30px;
+margin-bottom: 30px;
 }
 .title h1 {
-	font-size: 80px;
-	font-weight: 300;
-	text-transform: uppercase;
-	line-height: 0.85;
-	margin-bottom: 28px;
-	margin: 0;
-	padding: 0;
-	color: #FFFFFF;
+font-size: 80px;
+font-weight: 300;
+text-transform: uppercase;
+line-height: 0.85;
+margin-bottom: 28px;
+margin: 0;
+padding: 0;
+color: #FFFFFF;
 }
 .title h2 {
-	color: #FFFFFF;
-	font-size: 16px;
-	font-weight: 400;
-	text-transform: uppercase;
-	letter-spacing: 5px;
-	margin-top: 50px;
-}
-
-@media only screen and (max-height: 700px) {
-.title h1 {
-	font-size: 80px;
-}
-}
-.title p {
-	max-width: 600px;
-	margin: 0 auto;
-	line-height: 150%;
-}
-
-@media only screen and (max-width: 500px) {
-.title h1 {
-	font-size: 65px;
-}
+color: #FFFFFF;
+font-size: 16px;
+font-weight: 400;
+text-transform: uppercase;
+letter-spacing: 5px;
+margin-top: 50px;
 }
 .title .icon {
-	color: #FFFFFF;
-	font-size: 50px;
+color: #FFFFFF;
+font-size: 50px;
 }
 .main_nav {
-	position: fixed;
-	top: 0px;
-	max-height: 50px;
-	z-index: 999;
-	width: 100%;
-	padding-top: 17px;
-	background: none;
-	overflow: hidden;
-	-webkit-transition: all 0.3s;
-	transition: all 0.3s;
-	opacity: 0;
-	top: -100px;
+position: fixed;
+top: 0px;
+max-height: 50px;
+z-index: 999;
+width: 100%;
+padding-top: 17px;
+background: none;
+overflow: hidden;
+-webkit-transition: all 0.3s;
+transition: all 0.3s;
+opacity: 0;
+top: -100px;
 	padding-bottom: 6px;
 }
 
@@ -250,6 +171,7 @@ nav ul a:hover {
 .mobile-toggle span {
 	width: 30px;
 	height: 4px;
+	margin-top: 30%;
 	margin-bottom: 6px;
 	background: #cb2d3e;
 	display: block;
@@ -321,7 +243,9 @@ opacity: 0;
 /* About Section*/
 
 #about {
-	padding: 100px 0 50px 0;
+	width: 100%;
+	height: 100%;
+	padding: 100px 0 100px 0;
 }
 .imgme{
 	border-radius: 20%;
@@ -332,21 +256,28 @@ opacity: 0;
 .titleRed{
 	color: #cb2d3e;
 }
-
+.card{
+margin-top: 5%;
+}
 /* Proyectos */
 #proyectos{
-	padding: 100px 0 100 px 0;
-	background-color: #F5F5F5
+	padding: 100px 0 100px 0;
+	width: 100%;
+	height: 100%;
+}
+#contact{
+	width: 100%;
+	height: 100%;
+	padding: 100px 0 100px 0;
 }
 /* Skills Section */
 #skills {
+	width: 100%;
+	height: 100%;
 	padding: 100px 0 100px 0;
 	background-color: white;
 }
-
-
-/* Footer Section
-********************************************************************* */
+/* Footer Section */
 footer {
 	min-height: 120px;
 	padding: 40px 0 40px 0;
@@ -358,195 +289,86 @@ footer p {
 	color: #FFFFFF;
 	margin: 20px 0 0 0;
 }
-/* Lists
-********************************************************************* */
-ul {
-	list-style: circle inside;
-}
-ol {
-	list-style: decimal inside;
-}
-ol, ul {
-	padding-left: 0;
-	margin-top: 0;
-}
-ul ul, ul ol, ol ol, ol ul {
-	margin: 1.5rem 0 1.5rem 3rem;
-	font-size: 90%;
-}
-li {
-	margin-bottom: 1rem;
-}
-
-
 /* iconos skills */
 
-body {
-	text-align: center;
-}
+
 
 .main-content-icons{
 margin-top: 5%;
 }
 i.material-icons {
 	
-	color: white;
-	position: relative;
-	border-radius: 50%;
-	padding: 5px;
-	margin: 3px;
-	transition: color 0.2s ease, background-color 0.2s ease, transform 0.3s ease;
+color: white;
+position: relative;
+border-radius: 50%;
+padding: 5px;
+margin: 3px;
 }
 
 i.material-icons:after {
-	content: "";
-	width: 100%;
-	height: 100%;
-	border: solid 2px;
-	transform: scale(0.8);
-	position: absolute;
-	top: -2px;
-	left: -2px;
-	border-radius: 50%;
-	transition: all 0.3s ease;
+content: "";
+width: 100%;
+height: 100%;
+position: absolute;
+top: -2px;
+left: -2px;
+border-radius: 50%;
+transition: all 0.3s ease;
 }
 
-i.material-icons:hover:after {
-	transform: scale(1);
-
-}
 
 i.material-icons:nth-of-type(4) {
-	background-color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(4):hover {
-	color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(4):after {
-	border-color: #cb2d3e;
+background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(5) {
-	background-color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(5):hover {
-	color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(5):after {
-	border-color: #cb2d3e;
+background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(6) {
-	background-color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(6):hover {
-	color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(6):after {
-	border-color: #cb2d3e;
+background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(7) {
-	background-color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(7):hover {
-	color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(7):after {
-	border-color: #cb2d3e;
+background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(8) {
-	background-color: #cb2d3e;
+background-color: #cb2d3e;
 }
 
-i.material-icons:nth-of-type(8):hover {
-	color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(9):after {
-	border-color: #cb2d3e;
-}
 i.material-icons:nth-of-type(9) {
-	background-color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(9):hover {
-	color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(8):after {
-	border-color: #cb2d3e;
+background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(1) {
-	background-color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(1):hover {
-	color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(1):after {
-	border-color: #cb2d3e;
+background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(2) {
-	background-color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(2):hover {
-	color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(2):after {
-	border-color: #cb2d3e;
+background-color: #cb2d3e;
 }
 
 i.material-icons:nth-of-type(3) {
-	background-color: #cb2d3e;
+background-color: #cb2d3e;
 }
-
-i.material-icons:nth-of-type(3):hover {
-	color: #cb2d3e;
-}
-
-i.material-icons:nth-of-type(3):after {
-	border-color: #cb2d3e;
-}
-
-i.material-icons:hover {
-	background-color: transparent;
-	transform: rotate(90deg);
-	cursor: pointer;
-	box-shadow: none;
-}
-
 @media (min-width:601px) {
 i.material-icons {
-	padding:10px;
-	margin:5px;
-	font-size:2rem;
+padding:10px;
+margin:5px;
+font-size:2rem;
 }
 }
 
 @media (min-width:993px) {
 i.material-icons {
-	padding:20px;
-	margin:10px;
-	font-size:4rem;
+padding:20px;
+margin:10px;
+font-size:4rem;
 }
 i.material-icons:after {
-	border-width:3px;
-	top:-3px;
-	left:-3px;
+border-width:3px;
+top:-3px;
+left:-3px;
 }
 }
