--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,9 +248,9 @@ opacity: 0;
 	padding: 100px 0 100px 0;
 }
 .imgme{
-	border-radius: 20%;
-	width: 80%;
-	height: 85%;
+border-radius: 20%;
+max-width: 80%;
+max-height: 80%;
 }
 /* Todos los titulos */
 .titleRed{
