--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,7 +309,7 @@ i.material-icons:after {
 content: "";
 width: 100%;
 height: 100%;
-position: absolute;
+position: relative;
 top: -2px;
 left: -2px;
 border-radius: 50%;
