--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,8 +249,8 @@ opacity: 0;
 }
 .imgme{
 	border-radius: 20%;
-	width: 80%;
-	height: 85%;
+	max-width: 80%;
+	max-height: 85%;
 }
 /* Todos los titulos */
 .titleRed{
