--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,41 +5,13 @@ html {
 	font-size: 52.5%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	margin-top: 0;
-	margin-bottom: 2rem;
-	font-weight: 300;
-}
-h1 {
-	font-size: 4.0rem;
-	line-height: 1.2;
-	letter-spacing: -.1rem;
-}
-h2 {
-	font-size: 3.6rem;
-	line-height: 1.25;
-	letter-spacing: -.1rem;
-}
-h3 {
-	font-size: 3.0rem;
-	line-height: 1.3;
-	letter-spacing: -.1rem;
-}
-h4 {
-	font-size: 2.4rem;
-	line-height: 1.35;
-	letter-spacing: -.08rem;
-}
-h5 {
-	font-size: 1.8rem;
-	line-height: 1.5;
-	letter-spacing: -.05rem;
-}
-h6 {
-	font-size: 1.5rem;
-	line-height: 1.6;
-	letter-spacing: 0;
-}
+html {
+	box-sizing: border-box;
+  }
+  *, *:before, *:after {
+	box-sizing: inherit;
+  }
+
 body {
 	text-align: center;
 	font-size: 2.0em;
@@ -47,6 +19,12 @@ body {
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	color: #222;
 	
+}
+@media (min-height: 300px) {
+.container {
+	height: 100vh;
+	padding:0;
+}
 }
 
 /* NavsLinks */
@@ -283,15 +261,9 @@ height: 100vh;
 padding: 100px 0 100px 0;
 }
 .imgme{
-<<<<<<< HEAD
-	border-radius: 20%;
-	max-width: 80%;
-	max-height: 85%;
-=======
 border-radius: 20%;
 max-width: 80%;
-max-height: 80%;
->>>>>>> 3ced0e1b25aa36bbcf962d831a11b8456fcfab8b
+max-height: 85%;
 }
 /* Todos los titulos */
 .titleRed{
@@ -329,9 +301,6 @@ footer p {
 	margin: 20px 0 0 0;
 }
 /* iconos skills */
-
-
-
 .main-content-icons{
 margin-top: 5%;
 }
@@ -411,3 +380,4 @@ top:-3px;
 left:-3px;
 }
 }
+
