--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,14 +45,6 @@ padding: 2rem;
 max-width: 960px;
 text-align: center;
 }
-.title .smallsep {
-background: #fff;
-height: 2px;
-width: 70px;
-margin: auto;
-margin-top: 30px;
-margin-bottom: 30px;
-}
 .title h1 {
 font-size: 80px;
 font-weight: 300;
@@ -177,26 +169,26 @@ nav ul a:hover {
 	display: block;
 }
 .scroll-down {
-	position: absolute;
-	left: 50%;
-	bottom: 5vh;
-	display: block;
-	text-align: center;
-	font-size: 20px;
-	z-index: 100;
-	text-decoration: none;
-	text-shadow: 0;
-	width: 13px;
-	height: 13px;
-	border-bottom: 2px solid #fff;
-	border-right: 2px solid #fff;
-	z-index: 9;
-	-webkit-transform: translate(-50%, 0%) rotate(45deg);
-	-moz-transform: translate(-50%, 0%) rotate(45deg);
-	transform: translate(-50%, 0%) rotate(45deg);
-	-webkit-animation: fade_move_down 2s ease-in-out infinite;
-	-moz-animation: fade_move_down 2s ease-in-out infinite;
-	animation: fade_move_down 2s ease-in-out infinite;
+position: absolute;
+left: 50%;
+bottom: 5vh;
+display: block;
+text-align: center;
+font-size: 20px;
+z-index: 100;
+text-decoration: none;
+text-shadow: 0;
+width: 13px;
+height: 13px;
+border-bottom: 2px solid #fff;
+border-right: 2px solid #fff;
+z-index: 9;
+-webkit-transform: translate(-50%, 0%) rotate(45deg);
+-moz-transform: translate(-50%, 0%) rotate(45deg);
+transform: translate(-50%, 0%) rotate(45deg);
+-webkit-animation: fade_move_down 2s ease-in-out infinite;
+-moz-animation: fade_move_down 2s ease-in-out infinite;
+animation: fade_move_down 2s ease-in-out infinite;
 }
 
 
@@ -243,56 +235,53 @@ opacity: 0;
 /* About Section*/
 
 #about {
-	width: 100%;
-	height: 100%;
-	padding: 100px 0 100px 0;
+width: 100%;
+height: 100vh;
+padding: 100px 0 100px 0;
 }
 .imgme{
-	border-radius: 20%;
-	width: 80%;
-	height: 85%;
+border-radius: 20%;
+max-width: 80%;
+max-height: 85%;
 }
 /* Todos los titulos */
 .titleRed{
-	color: #cb2d3e;
+color: #cb2d3e;
 }
 .card{
 margin-top: 5%;
 }
 /* Proyectos */
 #proyectos{
-	padding: 100px 0 100px 0;
-	width: 100%;
-	height: 100%;
+padding: 100px 0 100px 0;
+width: 100%;
+height: 100vh;
 }
 #contact{
-	width: 100%;
-	height: 100%;
-	padding: 100px 0 100px 0;
+width: 100%;
+height: 100vh;
+padding: 100px 0 100px 0;
 }
 /* Skills Section */
 #skills {
-	width: 100%;
-	height: 100%;
-	padding: 100px 0 100px 0;
-	background-color: white;
+width: 100%;
+height: 100vh;
+padding: 100px 0 100px 0;
+background-color: white;
 }
 /* Footer Section */
 footer {
-	min-height: 120px;
-	padding: 40px 0 40px 0;
-	background: #cb2d3e;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);  /* Chrome 10-25, Safari 5.1-6 */
+min-height: 120px;
+padding: 40px 0 40px 0;
+background: #cb2d3e;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #ef473a, #cb2d3e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 footer p {
-	color: #FFFFFF;
-	margin: 20px 0 0 0;
+color: #FFFFFF;
+margin: 20px 0 0 0;
 }
 /* iconos skills */
-
-
-
 .main-content-icons{
 margin-top: 5%;
 }
