--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ color: #222;
 	
 }
 
+/* Proyectos */
+.demo-icons{
+font-size: 2em;
+letter-spacing: 0.4em;
+}
 /* NavsLinks */
 a {
 color: #cb2d3e;
@@ -346,9 +351,15 @@ left:-3px;
 
 .icon-contac{
 font-size: 2em;
-color: white
+color: white;
+text-align: center;
+letter-spacing: 0.4em;
+
+
+
 }
 
 .titleWhite{
 	color: white;
+	text-align: center;
 }
